2005-08-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/sel2path/curve.c (new_curve_list)
	* plug-ins/sel2path/fit.c (split_at_corners) 
	* plug-ins/winicon/icosave.c (ico_init_data): initialize variables.

2005-08-25  Michael Natterer  <mitch@gimp.org>

	* configure.in: define FOO_DISABLE_DEPRECATED for the new stable
	versions of GTK+ and Pango.

	Check for poppler >= 0.4.1, they did another API change.

	* plug-ins/common/poppler.c: and some more #ifdefs to
	poppler_page_render_to_pixbuf().

2005-08-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpview.[ch]: minor code and formatting cleanup. 

2005-08-25  Sven Neumann  <sven@gimp.org>

	* app/base/siox.[ch]
	* app/core/gimpscanconvert.c: fixed API docs.

2005-08-25  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimputils.h (gimp_canonicalize_identifier): sync
	parameter name with implementation to please gtk-doc.

2005-08-24  Tor Lillqvist  <tml@novell.com>

	Make GIMP work on Win32 even if installed in a path containing
	random non-ASCII characters.

	* libgimpbase/gimpenv.c (gimp_toplevel_directory): [Win32] Use
	wide-char API on NT-based Windowses. Keep the toplevel directory
	name in UTF-8. The rest of GIMP assumes it is UTF-8 anyway, and
	for instance passes file names constructed from it to g_open().

	* app/plug-in/plug-in.c (plug_in_open): On Win32, if compiled
	against GLib < 2.8.2, convert the pathname arguments passed to
	g_spawn_async() to locale charset (system codepage). The
	g_spawn*() functions in GLib < 2.8.2 take system codepage
	arguments and not UTF-8.

2005-08-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/paint-funcs/paint-funcs-generic.h (blend_pixels):
	Change blending algorithm to fix misbehavior of smudge
	tool, should fix bug #163721.

2005-08-24  Sven Neumann  <sven@gimp.org>

	* app/actions/image-commands.c
	* app/actions/layers-commands.c
	* app/dialogs/image-scale-dialog.c
	* app/dialogs/resize-dialog.[ch]: remember the selected unit for